Fix sponsor alignment

--- a/style/main.less
+++ b/style/main.less
@@ -61,11 +61,12 @@ main {
 
 .sponsors {
     text-align: center;
+    margin:     36px 0px 36px 0px;
 
     .sponsor {
-        height:     160px;
-        width:      200px;
-        text-align: center;
+        height:  160px;
+        width:   200px;
+        display: inline-block;
 
         img {
             vertical-align: middle;
